<resources>
    <string name="app_name">eShop</string>
    <string name="marty">eShop</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <string name="action_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="clear_all">Clear all</string>
    <string name="my_cart">My Cart</string>
    <string name="price">Price</string>
    <string name="order_details">Order Details</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shopping_addresses">Shopping Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="about_us">About us</string>
    <string name="sign_out">Sign-out</string>
    <string name="wishlist">Wishlist</string>
    <string name="you_haven_t_added_any_products_yet">You haven\'t added any products yet</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="no_notification">No Notification</string>
    <string name="buy_now">Buy now</string>
    <string name="submit">SUBMIT</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
</resources>